name:             config-ini-examples
version:          0.2.0.0
synopsis:         Example config-ini programs
homepage:         https://github.com/aisamanra/config-ini
bug-reports:      https://github.com/aisamanra/config-ini/issues
description:      Test programs associated with config-ini
license:          BSD3
license-file:     LICENSE
author:           Getty Ritter <config-ini@infinitenegativeutility.com>
maintainer:       Getty Ritter <config-ini@infinitenegativeutility.com>
copyright:        ©2017 Getty Ritter
category:         Configuration
build-type:       Simple
cabal-version:    >= 1.18

source-repository head
  type: git
  location: git://github.com/aisamanra/config-ini.git

executable basic-example
  hs-source-dirs:   basic-example
  main-is:          Main.hs
  ghc-options:      -Wall
  build-depends:    base >=4.8 && <5
                  , text
                  , config-ini
  default-language: Haskell2010

executable bidir-example
  hs-source-dirs:   bidir-example
  main-is:          Main.hs
  ghc-options:      -Wall
  build-depends:    base >=4.8 && <5
                  , text
                  , config-ini
                  , microlens-th
  default-language: Haskell2010

executable config-example
  hs-source-dirs:   config-example
  main-is:          Main.hs
  ghc-options:      -Wall
  build-depends:    base >=4.8 && <5
                  , text
                  , config-ini
                  , microlens-platform
  default-language: Haskell2010
